--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -5,6 +5,9 @@
 <table>
   <thead>
     <tr>
+      <th>Users</th>
+      <th>Events</th>
+      <th>Team name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +15,9 @@
   <tbody>
     <% @registrations.each do |registration| %>
       <tr>
+        <td><%= registration.users %></td>
+        <td><%= registration.events %></td>
+        <td><%= registration.team_name %></td>
         <td><%= link_to 'Show', registration %></td>
         <td><%= link_to 'Edit', edit_registration_path(registration) %></td>
         <td><%= link_to 'Destroy', registration, method: :delete, data: { confirm: 'Are you sure?' } %></td>
