--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,4 +1,19 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>Users:</strong>
+  <%= @registration.users %>
+</p>
+
+<p>
+  <strong>Events:</strong>
+  <%= @registration.events %>
+</p>
+
+<p>
+  <strong>Team name:</strong>
+  <%= @registration.team_name %>
+</p>
+
 <%= link_to 'Edit', edit_registration_path(@registration) %> |
 <%= link_to 'Back', registrations_path %>
