Fix in registrations form

--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :users_id %>
-    <%= form.text_field :users_id, id: :registration_users_id %>
+    <%= form.label :user_id %>
+    <%= form.text_field :user_id, id: :registration_user_id %>
   </div>
 
   <div class="field">
-    <%= form.label :events_id %>
-    <%= form.text_field :events_id, id: :registration_events_id %>
+    <%= form.label :event_id %>
+    <%= form.text_field :event_id, id: :registration_event_id %>
   </div>
 
   <div class="field">
