--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Users:</strong>
-  <%= @registration.users %>
+  <strong>User:</strong>
+  <%= @registration.user %>
 </p>
 
 <p>
-  <strong>Events:</strong>
-  <%= @registration.events %>
+  <strong>Event:</strong>
+  <%= @registration.event %>
 </p>
 
 <p>
