--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Users</th>
-      <th>Events</th>
+      <th>User</th>
+      <th>Event</th>
       <th>Team name</th>
       <th colspan="3"></th>
     </tr>
@@ -15,8 +15,8 @@
   <tbody>
     <% @registrations.each do |registration| %>
       <tr>
-        <td><%= registration.users %></td>
-        <td><%= registration.events %></td>
+        <td><%= registration.user %></td>
+        <td><%= registration.event %></td>
         <td><%= registration.team_name %></td>
         <td><%= link_to 'Show', registration %></td>
         <td><%= link_to 'Edit', edit_registration_path(registration) %></td>
