--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,11 @@
     <%= f.text_field :contact, autofocus: true %>
   </div>
 
+  <div class="field">
+    <%= f.label :college %><br />
+    <%= f.text_field :college, autofocus: true %>
+  </div>
+
   <!-- <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
