--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
+<ul class="hmenu">
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+  </li>
+</ul>
 
 <h1>Users</h1>
 
@@ -8,18 +13,32 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+  <p>
+    <strong>Name:</strong>
+    <%= @user.name %>
+  </p>
 
+  <p>
+    <strong>College:</strong>
+    <%= @user.college %>
+  </p>
+
+  <p>
+    <strong>Contact:</strong>
+    <%= @user.contact %>
+  </p>
+
+  <p>
+    <strong>Email:</strong>
+    <%= @user.email %>
+  </p>
   <tbody>
-    <% @users.each do |user| %>
       <tr>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_registration_url(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_user_registration_url(@user) %></td>
+        <td><%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_path %>
