--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -35,6 +35,7 @@
   <tbody>
       <tr>
         <td><%= link_to 'Edit', edit_user_registration_url(@user) %></td>
+        <td><%= link_to 'Events', events_url %></td>
         <td><%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
 
