--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1235,11 +1235,14 @@ who is saved.</p>-->
 					<!-- contact form -->
 					<div class="col-lg-8 col-md-8 col-sm-7 col-xs-12 wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="300ms">
 						<div class="contact-form">
-							<form action="mailto:Infin8-2018@iiitb.org" id="contact-form">
+							<form method="post" action="/sendquery" id="contact-form">
 								<div class="input-group name-email">
 									<div class="input-field">
 										<input type="text" name="name" id="name" placeholder="Name" class="form-control">
 									</div>
+                  <p>
+                      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+                  </p>
 									<div class="input-field">
 										<input type="email" name="email" id="email" placeholder="Email" class="form-control">
 									</div>
@@ -1396,61 +1399,5 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
 		<!-- Custom Functions -->
         <script src="/js/custom.js"></script>
 
-		<script type="text/javascript">
-			$(function(){
-				/* ========================================================================= */
-				/*	Contact Form
-				/* ========================================================================= */
-
-				$('#contact-form').validate({
-					rules: {
-						name: {
-							required: true,
-							minlength: 2
-						},
-						email: {
-							required: true,
-							email: true
-						},
-						message: {
-							required: true
-						}
-					},
-					messages: {
-						name: {
-							required: "come on, you have a name don't you?",
-							minlength: "your name must consist of at least 2 characters"
-						},
-						email: {
-							required: "no email, no message"
-						},
-						message: {
-							required: "um...yea, you have to write something to send this form.",
-							minlength: "thats all? really?"
-						}
-					},
-					submitHandler: function(form) {
-						$(form).ajaxSubmit({
-							type:"POST",
-							data: $(form).serialize(),
-							url:"process.php",
-							success: function() {
-								$('#contact-form :input').attr('disabled', 'disabled');
-								$('#contact-form').fadeTo( "slow", 0.15, function() {
-									$(this).find(':input').attr('disabled', 'disabled');
-									$(this).find('label').css('cursor','default');
-									$('#success').fadeIn();
-								});
-							},
-							error: function() {
-								$('#contact-form').fadeTo( "slow", 0.15, function() {
-									$('#error').fadeIn();
-								});
-							}
-						});
-					}
-				});
-			});
-		</script>
     </body>
 </html>
