--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -43,16 +43,16 @@
 
     </head>
 
-    <body id="body">
+      <body id="body">
       <!-- audio -->
-      <audio autoplay>
+      <!-- <audio autoplay>
       <source src="/1.mp3" type="audio/mp3" >
       Sorry your Browser doesn't support audio file.
       </audio>
       <audio loop onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 269000)">
       <source src="/2.mp3" type="audio/mp3" >
       Sorry your Browser doesn't support audio file.
-      </audio>
+      </audio> -->
       <!-- end audio -->
 
 		<!-- preloader -->
@@ -103,6 +103,9 @@
 
             </div>
         </header>
+        <% if flash[:success] %>
+      <div class="success"><%= flash[:success] %></div>
+    <% end %>
         <!--
         End Fixed Navigation
         ==================================== -->
