--- a/app/views/regs/new.html.erb
+++ b/app/views/regs/new.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  
+
   <input hidden id="reg_user_id" name="reg[user_id]" value="<%= @usid %>">
 
   <!-- <div class="field"> -->
@@ -31,4 +31,4 @@
   </div>
 <% end %>
 
-<%= link_to 'Back', regs_path %>
+<%= link_to 'Back', root_path%>
