--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -421,7 +421,7 @@
         <!--
         Meet Our Team
         ==================================== -->
-
+<!--
 		<section id="team" class="team">
 			<div class="container">
 				<div class="row">
@@ -505,7 +505,7 @@
 
 				</div>
 			</div>
-		</section>
+		</section> -->
 
         <!--
         End Meet Our Team
@@ -1367,7 +1367,7 @@ who is saved.</p>-->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
 		<!-- Google Map -->
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-        <!--<script type="text/javascript" src="https://www.google.co.in/maps/dir/''/locate+iiit+bangalore/@12.8447419,77.5931912,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x3bae135aeb7f340f:0x3ad86af40d2ac611!2m2!1d77.6632317!2d12.8447512"></script> -->
+        <script type="text/javascript" src="https://www.google.co.in/maps/dir/''/locate+iiit+bangalore/@12.8447419,77.5931912,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x3bae135aeb7f340f:0x3ad86af40d2ac611!2m2!1d77.6632317!2d12.8447512"></script>
        <!-- <h1>Google Map</h1>
 
 <div id="map" style="width:700px;height:400px;background:yellow"></div>
