--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1367,7 +1367,7 @@ who is saved.</p>-->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
 		<!-- Google Map -->
-        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        -<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4VwuUq513QueCh--uo2heBOxnatpb5hw&callback=initMap" type="text/javascript"></script>
         <script type="text/javascript" src="https://www.google.co.in/maps/dir/''/locate+iiit+bangalore/@12.8447419,77.5931912,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x3bae135aeb7f340f:0x3ad86af40d2ac611!2m2!1d77.6632317!2d12.8447512"></script>
        <!-- <h1>Google Map</h1>
 
