Changed login to register to h6

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -595,7 +595,7 @@
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                     <p class="item-intro" style ="font-size:120%;">“Photography for me is not looking, it’s feeling. If you can’t feel what you’re looking at, then you’re never going to get others to feel anything when they look at your pictures.”
@@ -670,7 +670,7 @@ Taking pictures is savouring life intensely, every hundredth of a second. Life g
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                     <p class="item-intro">Brought to you by cite, a club of IIIT-B.</p>
@@ -743,7 +743,7 @@ c. Relevance</br></br>
                         <p> Already registered </p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                      <p class="item-intro" style ="font-size: 120%;">"Life is one grand, sweet song, so start the music. Music is life, that's why heart "beats""
@@ -799,7 +799,7 @@ c. Relevance</br></br>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
                     <p class="item-intro" style ="font-size: 120%;">"Life is one grand, sweet song, so start the music. Music is life, that's why heart "beats""
 </p>
@@ -854,7 +854,7 @@ c. Relevance</br></br>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
                     <!--<p class="item-intro">Lorem ipsum dolor sit amet consectetur.</p>-->
                     <img class="img-responsive img-centered" src="/img/portfolio/05-preview.jpg" alt="">
@@ -906,7 +906,7 @@ c. Relevance</br></br>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
                     <p class="item-intro">-Brought to you by CP club of iiitb.</p>
                     <img class="img-responsive img-centered" src="/img/portfolio/06-preview.jpg" alt="">
@@ -958,7 +958,7 @@ c. Relevance</br></br>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
                     <p class="item-intro">Lorem ipsum dolor sit amet consectetur.</p>
                     <img class="img-responsive img-centered" src="/img/portfolio/07-preview.jpg" alt="">
@@ -1010,7 +1010,7 @@ c. Relevance</br></br>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                     <p class="item-intro">Lorem ipsum dolor sit amet consectetur.</p>
@@ -1067,7 +1067,7 @@ who is saved.</p>
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                     <p class="item-intro">-Brought to you by comic club of iiitb.</p>
@@ -1124,7 +1124,7 @@ who is saved.</p>-->
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                     <p class="item-intro">- brought to you by Literary Arts club of iiitb.</p>
@@ -1179,7 +1179,7 @@ who is saved.</p>-->
                         <p><h6> Already registered </h6></p>
                       <% end %>
                     <% else %>
-                      <%= link_to "Login to register", new_user_session_path %>
+                      <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
                     <p class="item-intro">"I dream my painting and I paint my dreams."</p>
