--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -220,7 +220,7 @@
 
 							<div class="service-desc">
 								<h3>What's New?</h3>
-								<p>Unlike the previous years,this year we are going inter-collegiate. With larger events, a bigger and better Infin8 will raise spirits and bring out the best in us. Come join us! :D</p>
+								<p>Larger events, a bigger and better Infin8 will raise spirits and bring out the best in us. Come join us! :D</p>
 							</div>
 						</div>
 					</div>
