fun fact removed

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -511,7 +511,7 @@
         Some fun facts
         ==================================== -->
 
-		<section id="facts" class="facts">
+		<!-- <section id="facts" class="facts">
 			<div class="parallax-overlay">
 				<div class="container">
 					<div class="row number-counters">
@@ -521,12 +521,10 @@
 							<div class="devider"><i class="fa fa-circle-o fa-lg"></i></div>
 						</div>
 
-						<!-- first count item -->
                         <div class="col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
 							<div class="counters-item">
 								<i class="fa fa-calendar fa-3x"></i>
 								<strong data-to="15">0</strong>
-								<!-- Set Your Number here. i,e. data-to="56" -->
 								<p>Number of Events</p>
 							</div>
 						</div>
@@ -534,7 +532,6 @@
 							<div class="counters-item">
 								<i class="fa fa-users fa-3x"></i>
 								<strong data-to="1000">0</strong>
-								<!-- Set Your Number here. i,e. data-to="56" -->
 								<p>Expected Footfall</p>
 							</div>
 						</div>
@@ -543,7 +540,6 @@
 							<div class="counters-item">
 								<i class="fa fa-trophy fa-3x"></i>
 								<strong data-to="100">0</strong>
-								<!-- Set Your Number here. i,e. data-to="56" -->
 								<p>Prizes</p>
 							</div>
 						</div>
@@ -552,7 +548,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
         <!--
         End Some fun facts
