--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,24 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container-narrow">
+  <div class="masthead">
+    <h3 class="muted"><%= link_to "Go Back To Home Page !", root_path %></h3>
+    <h5 class="muted">Welcome to Infin8 ! </h5>
   </div>
+  <hr />
+  <%= yield %>
+</div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+<div class="border-form-div">
+  <h2>Sign up</h2>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :contact %><br />
-    <%= f.text_field :contact, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :college %><br />
-    <%= f.text_field :college, autofocus: true %>
-  </div>
-
-  <!-- <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div> -->
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <%= f.email_field :email, :autofocus => true, :placeholder => 'Email address' %></br>
+    <%= f.text_field :name, :autofocus => true, :placeholder => 'Name' %></br>
+    <%= f.text_field :college, :autofocus => true, :placeholder => 'College' %></br>
+    <%= f.text_field :contact, :autofocus => true, :placeholder => 'Contact' %></br>
+    <%= f.password_field :password, :placeholder => 'Password' %></br>
+    <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation' %></br>
+    <%= f.submit "Sign up",:class=>'btn btn-primary' %>
+  <% end %>
+  <%= render "devise/shared/links" %>
+</div>
