--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Forgot your password?</h2>
+<div class="container-narrow">
+  <div class="masthead">
+    <h3 class="muted"><%= link_to "Go Back To Home Page !", root_path %></h3>
+    <h5 class="muted">Welcome to Infin8 ! </h5>
+  </div>
+  <hr />
+  <%= yield %>
+</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
+<div class="border-form-div">
+  <h2>Forgot Password</h2>
+  <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <%= f.email_field :email, :autofocus => true, :placeholder => 'Email address' %></br>
   </div>
-
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions",:class=>'btn btn-primary' %>
   </div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
