--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,13 +12,17 @@
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
+    <div class="field">
     <%= f.email_field :email, :autofocus => true, :placeholder => 'Email address' %></br>
     <%= f.text_field :name, :autofocus => true, :placeholder => 'Name' %></br>
     <%= f.text_field :college, :autofocus => true, :placeholder => 'College' %></br>
     <%= f.text_field :contact, :autofocus => true, :placeholder => 'Contact' %></br>
     <%= f.password_field :password, :placeholder => 'Password' %></br>
     <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation' %></br>
+    </div>
+    <div class="actions">
     <%= f.submit "Sign up",:class=>'btn btn-primary' %>
+  </div>
   <% end %>
   <%= render "devise/shared/links" %>
 </div>
