--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container-narrow">
   <div class="masthead">
-    <h3 class="muted"><%= link_to "Go Back To Home Page !", root_path %></h3>
-    <h5 class="muted">Welcome to Infin8 ! </h5>
+    
+    <h6 >Welcome to Infin8 ! </h6>
   </div>
   <hr />
   <%= yield %>
