--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -56,9 +56,9 @@
       <!-- end audio -->
 
 		<!-- preloader -->
-		<div id="preloader">
+		<!-- <div id="preloader">
 			<img src="/img/loading.gif" alt="Preloader" width="400" height="300">
-		</div>
+		</div> -->
 		<!-- end preloader -->
 
         <!--
@@ -246,7 +246,7 @@
         Our Works
         ==================================== -->
 
-		<section id="works" class="works clearfix">
+		<section id="works" class="works clearfix" style="background-color: #fff;">
 			<div class="container">
 				<div class="row">
 
@@ -548,7 +548,6 @@
 								<p>Prizes</p>
 							</div>
 						</div>
-						<!-- end first count item -->
 
 					</div>
 				</div>
@@ -1283,7 +1282,7 @@ who is saved.</p>-->
         Contact Us
         ==================================== -->
 
-		<section id="contact" class="contact">
+		<section id="contact" class="contact"  style="background-color: #fff;">
             <!-- Google map -->
             <div id="map_canvas" class="wow bounceInDown animated" data-wow-duration="500ms"></div>
             <!-- End Google map -->
@@ -1355,7 +1354,7 @@ who is saved.</p>-->
         ==================================== -->
 
 
-		<footer id="footer" class="footer">
+		<footer id="footer" class="footer" style="background-color:transparent">
 			<div class="container">
 				<div class="row">
 
@@ -1376,10 +1375,13 @@ who is saved.</p>-->
             </br></br>
 
 							<h6>Connect With Us!</h6>
+                            <br>
 							<ul>
-								<li><a href="https://www.facebook.com/Infin8-2018-376719852758288/">Facebook</a></li>
-								<li><a href=" https://www.instagram.com/infin8_2018iiitb/?hl=en">Instagram</a></li>
-								<li><a href="https://twitter.com/Infin8_2018">Twitter</a></li>
+								<li><a href="https://www.facebook.com/Infin8-2018-376719852758288/"><h5>Facebook</h5></a></li>
+                                <br>
+								<li><a href=" https://www.instagram.com/infin8_2018iiitb/?hl=en"><h5>Instagram</h5></a></li>
+                                <br>
+                                <li><a href="https://twitter.com/Infin8_2018"><h5>Twitter</h5></a></li>
 							</ul>
             	</div>
 					</div>
@@ -1390,10 +1392,10 @@ who is saved.</p>-->
 						<div class="footer-single">
 							<h6>Contact : </br></h6>
 							<ul>
-                <li><h6>Lakshay Jindal </h6>Lakshay.infin8@iiitb.org (+91-8860085061)</li>
-                <li><h6>Anshika Gupta </h6>Anshika.infin8@iiitb.org  (+91-9945044518)</li>
-                <li><h6>Surya Peruri </h6>Surya.infin8@iiitb.org (+91-8618840588)</li>
-                <li><h6>Arushi Mohania </h6>Arushi.infin8@iiitb.org (+91-9739094261)</li>
+                <li><h6>Lakshay Jindal </h6>Lakshay.infin8@iiitb.org<br> (+91-8860085061)</li>
+                <li><h6>Anshika Gupta </h6>Anshika.infin8@iiitb.org<br>  (+91-9945044518)</li>
+                <li><h6>Surya Peruri </h6>Surya.infin8@iiitb.org<br> (+91-8618840588)</li>
+                <li><h6>Arushi Mohania </h6>Arushi.infin8@iiitb.org<br> (+91-9739094261)</li>
                 </ul>
 						</div>
 					</div>
@@ -1401,10 +1403,10 @@ who is saved.</p>-->
 						<div class="footer-single">
             </br>
 							<ul>
-                <li><h6>Varada Desikan </h6>Varada.infin8@iiitb.org (+91-9741129355)</li>
-                <li><h6>Nishant Malpani </h6>Nishant.infin8@iiitb.org (+91-8424962073)</li>
-								<li><h6>Priyank Rai</h6>Priyank.infin8@iiitb.org (+91-7898920237)</li>
-								<li><h6>Nitesh Singh Baghel</h6>Nitesh.infin8@iiitb.org(+91-9827936494)</li>
+                <li><h6>Varada Desikan </h6>Varada.infin8@iiitb.org<br> (+91-9741129355)</li>
+                <li><h6>Nishant Malpani </h6>Nishant.infin8@iiitb.org<br> (+91-8424962073)</li>
+								<li><h6>Priyank Rai</h6>Priyank.infin8@iiitb.org<br> (+91-7898920237)</li>
+								<li><h6>Nitesh Singh Baghel</h6>Nitesh.infin8@iiitb.org<br> (+91-9827936494)</li>
 							</ul>
 						</div>
 					</div>
