--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  *= require_tree .
 
  */
- @import '_bootstrap';
+ @import 'bootstrap';
  .main-header {
     background-repeat: no-repeat;
     background-position: center;
