--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
     <div class="field">
       <%= f.email_field :email, :autofocus => true, :placeholder => 'Email address' %></br>
       <%= f.text_field :name, :autofocus => true, :placeholder => 'Name' %></br>
-      <%= f.text_field :college, :autofocus => true, :placeholder => 'College' %></br>
+      <%= f.hidden_field :college, :autofocus => true, :placeholder => 'College' %></br>
       <%= f.text_field :contact, :autofocus => true, :placeholder => 'Contact' %></br>
       <%= f.password_field :password, :placeholder => 'Password' %></br>
       <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation' %></br>
