--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -140,7 +140,7 @@
 
 							<p data-wow-duration="700ms" class="wow slideInRight animated">19-21 January</p>
 
-							<ul class="social-links text-center">
+							<ul class="social-links text-center" style="#fff">
                 <li><a href="https://www.facebook.com/Infin8-2018-376719852758288/"><i class="fa fa-facebook fa-2x"></i></a></li>
                 <li><a href=" https://www.instagram.com/infin8_2018iiitb/?hl=en"><i class="fa fa-instagram fa-2x"></i></a></li>
                 <li><a href="https://twitter.com/Infin8_2018"><i class="fa fa-twitter fa-2x"></i></a></li>
@@ -915,7 +915,7 @@ c. Relevance</br></br>
                       <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
-                    
+
                     <img class="img-responsive img-centered" src="/img/portfolio/08-preview.jpg" alt="">
                     <p style =" font-size:140%;">You are on Titanic sailing across Atlantic. But the "unsinkable" ship, the largest, most luxurious ocean liner of its time, crashed into an iceberg on its maiden voyage. You are a renowned celebrity stuck in a sinking ship. Sadly, there are only 2 life-jackets  of which one belongs to the captain of course. One  remaining  life-jacket  will  be  given  to  the  person  whose  life  is  most  important  to  the world. Justify why YOU must get a chance to outlive thousands of people on the ship. Explain why does the world need you? Can you explain your purpose of life? Earn the life-jacket and you earn our respect! </br></br></br><strong><u>RULES</u></strong></br></p>
                     <p align="left" style ="font-size:120%;">1. Each round will be held in group
