--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1172,7 +1172,7 @@ who is saved.</p>-->
                       <p><h6><%= link_to "Login to register", new_user_session_path %></h6><p>
                     <% end %>
 
-                    <p class="item-intro">- brought to you by Music club of iiitb.</p>
+                    <p class="item-intro">- brought to you by Dance club of iiitb.</p>
                     <img class="img-responsive img-centered" src="/img/portfolio/08-preview.jpg" alt="">
                     <p style =" font-size:140%;">Legs tapping on the floor to the Punjabi music in the air and yet not confident enough to turn up on the dance floor? Have no fear as a Dance Workshop (Bollywood Style),   by Mr Abhishek Anand, a world-class choreographer, is all set for you in this Infin8 - 2018. Do check out his profile below, because if that's not going to force you to come to the workshop then we don't know what will.</p>
                     <!--<ul class="list-inline">
